--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,8 +22,17 @@
         <activity android:name=".RegisterActivity" />
         <activity android:name=".MainActivity" />
         <activity android:name=".PlaceActivity" />
-        <activity android:name=".Model.PlaceShowActivity"
-            android:parentActivityName=".MainActivity"></activity>
+        <activity
+            android:name=".Model.PlaceShowActivity"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".SettingsActivity"
+            android:label="@string/title_activity_settings"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="easyserv.aapp.customserv.com.myapplication.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
