--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".PhoneVerification"></activity>
+        <activity android:name=".PhoneVerification"/>
         <activity android:name=".ReviewsActivity" />
         <activity android:name=".StartActivity">
             <intent-filter>
